--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,24 +46,24 @@ footer {
   background-color: #f8f9fa;
   padding: 15px;
   border-top: 1px solid #dee2e6;
+  flex-shrink: 0;  
+  margin-top: auto;  
+
 }
+
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
   color: rgb(var(--bs-tertiary-color-rgb));
 }
 
-.content {
-  flex: 1 0 auto;
-}
-.content h1 {
-  text-align: center;
-}
-
 .table {
   margin-top: 20px;
 }
 
-footer {
-  flex-shrink: 0;
+.content {
+  flex: 1 0 auto;  
+}
+.content h1 {
+  text-align: center;
 }
