--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -1,16 +1,17 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Список постів
+    Список Новин
 {% endblock %}
 
 {% block content %}
-<div class="container my-4">
-    <h1 class="text-center">Пости</h1>
+<div class="container my-4 main">
+    <h1 class="text-center">Новини</h1>
     <a href="{% url 'post_create' %}" class="btn btn-primary mb-3">Додати новий пост</a>
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
+                <th>Зображення</th>
                 <th>Назва</th>
                 <th>Контент</th>
                 <th>Дата створення</th>
@@ -19,10 +20,14 @@
         </thead>
         <tbody>
             {% for post in posts %}
-            <tr>
+            <tr class='post'>
+                <td class=>
+                    <img src="{% if post.image %}{{ post.image }}{% else %}/static/image/istockphoto.png{% endif %}" 
+                    class="img-thumbnail" alt="Новина"/>
+                </td>
                 <td>{{ post.title }}</td>
                 <td>{{ post.content }}</td>
-                <td>{{ post.created_at }}</td>
+                <td>{{ post.created_at|date:"j F Y, H:i" }}</td>
                 <td>
                     <a href="{% url 'post_edit' post.pk %}" class="btn btn-warning btn-sm">Редагувати</a>
                     <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal" 
