--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
                 </ul>
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/register">Реєстрація</a>
+                    <a class="nav-link" aria-current="page" href="/users">Реєстрація</a>
                 </li>
                 </ul>
             </div>
