--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -15,6 +15,6 @@
       <button type="submit" class="btn btn-primary">Зберегти</button>
     </form>
     <br>
-    <a href="{% url 'post_list' %}" class="btn btn-secondary">До списку постів</a>
+    <a href="{% url 'posts:list' %}" class="btn btn-secondary">До списку постів</a>
   </div>
 {% endblock %}
