--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -7,7 +7,10 @@
 {% block content %}
 <div class="container my-4 main">
     <h1 class="text-center">Новини</h1>
-    <a href="{% url 'post_create' %}" class="btn btn-primary mb-3">Додати новий пост</a>
+    <a href="{% url 'posts:create' %}" class="btn btn-primary mb-3" 
+    {% if not user.is_authenticated %}style="display:none;"{% endif %}>
+    Додати новий пост
+    </a>
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -15,7 +18,11 @@
                 <th>Назва</th>
                 <th>Контент</th>
                 <th>Дата створення</th>
-                <th>Дії</th>
+                {% if user.is_authenticated %}
+                    <th>Дії</th>
+                {% else %}
+                    <th>Вподобати</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -29,9 +36,20 @@
                 <td>{{ post.content }}</td>
                 <td>{{ post.created_at|date:"j F Y, H:i" }}</td>
                 <td>
-                    <a href="{% url 'post_edit' post.pk %}" class="btn btn-warning btn-sm">Редагувати</a>
-                    <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal" 
-                        data-id="{{ post.pk }}">Видалити</button>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'posts:edit' post.pk %}" class="btn btn-warning btn-sm">
+                            <i class="bi bi-pencil-fill"></i>
+                        </a>
+                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal" 
+                                data-id="{{ post.pk }}">
+                            <i class="bi bi-trash"></i>
+                        </button>
+                    {% else %}
+                        <button class="btn btn-dark btn-sm" data-bs-toggle="modal">
+                            <i class="bi bi-hand-thumbs-up"></i>
+                        </button>
+
+                    {% endif %}
                 </td>
             </tr>
             {% endfor %}
@@ -59,16 +77,17 @@
         </div>
     </div>
 </div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const deleteModal = document.getElementById('deleteModal');
-        deleteModal.addEventListener('show.bs.modal', function (event) {
-            const button = event.relatedTarget;
-            const postId = button.getAttribute('data-id');
-            const deleteForm = document.getElementById('deleteForm');
-            deleteForm.action = `{% url 'post_delete' 0 %}`.replace('0', postId);
+{% endblock %}
+{% block scripts %}
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const deleteModal = document.getElementById('deleteModal');
+            deleteModal.addEventListener('show.bs.modal', function (event) {
+                const button = event.relatedTarget;
+                const postId = button.getAttribute('data-id');
+                const deleteForm = document.getElementById('deleteForm');
+                deleteForm.action = `{% url 'posts:delete' 0 %}`.replace('0', postId);
+            });
         });
-    });
-</script>
+    </script>
 {% endblock %}
