--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <link
-      rel="stylesheet"
-      href={%static 'bootstrap/css/bootstrap.min.css'%}
+        rel="stylesheet"
+        href={%static 'bootstrap/css/bootstrap.min.css'%}
+    />
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+        rel="stylesheet"
     />
 </head>
 <body>
@@ -25,19 +29,35 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/news">Новини</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Контакти</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'posts:list' %}">Новини</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Контакти</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/users">Реєстрація</a>
-                </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <span class="nav-link text-light">Привіт {{ user.username }}</span>
+                        </li>
+                        <li class="nav-item">
+                            <form action="{% url 'users:logout' %}" method="post" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="nav-link btn btn-link text-decoration-none">
+                                    Вихід <i class="bi bi-box-arrow-right"></i>
+                                </button>
+                            </form>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:login' %}">Login <i class="bi bi-box-arrow-in-left"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:register' %}">Register <i class="bi bi-person-plus"></i></a>
+                        </li>
+                    {% endif %}
                 </ul>
-            </div>
             </div>
         </nav>
     </header>
@@ -48,7 +68,9 @@
         <p>&copy; 2024 Мій Блог. Всі права захищені.</p>
     </footer>
     {%endblock%}
-
     <script src= {%static 'bootstrap/js/bootstrap.bundle.min.js'%}></script>
+    {% block scripts %}
+   
+    {% endblock %}
 </body>
 </html>
