--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -18,6 +18,7 @@
                 <th>Назва</th>
                 <th>Контент</th>
                 <th>Дата створення</th>
+                <th>Автор</th>
                 {% if user.is_authenticated %}
                     <th>Дії</th>
                 {% else %}
@@ -35,6 +36,7 @@
                 <td>{{ post.title }}</td>
                 <td>{{ post.content }}</td>
                 <td>{{ post.created_at|date:"j F Y, H:i" }}</td>
+                <td>{{ post.author.username }}</td>
                 <td>
                     {% if user.is_authenticated %}
                         <a href="{% url 'posts:edit' post.pk %}" class="btn btn-warning btn-sm">
